--- a/src/app/dashboard/nav/nav.component.html
+++ b/src/app/dashboard/nav/nav.component.html
@@ -1,3 +1,8 @@
-<p>
-  nav works!
-</p>
+<mat-toolbar color="primary" margin="0px">
+  <mat-toolbar-row>
+    <span>Metrix Base</span>
+    <span class="example-spacer"></span>
+    <mat-icon class="example-icon">favorite</mat-icon>
+    <mat-icon class="example-icon">delete</mat-icon>
+  </mat-toolbar-row>
+</mat-toolbar>
