--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,28 @@
 <app-nav></app-nav>
+<mat-accordion>
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Map
+        </mat-panel-title>
+        <mat-panel-description>
+        <p>worx</p>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+</mat-expansion-panel>
 
-<app-widgets></app-widgets>
+    <mat-expansion-panel (opened)="panelOpenState = true"
+                         (closed)="panelOpenState = false">
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Self aware panel
+        </mat-panel-title>
+        <mat-panel-description>
+          Currently I am {{panelOpenState ? 'open' : 'closed'}}
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p>worx</p>
+    </mat-expansion-panel>
+  </mat-accordion>
+  
+  <app-widgets></app-widgets> 
