--- a/src/lib/gridsterItem.css
+++ b/src/lib/gridsterItem.css
@@ -6,6 +6,8 @@
   transition: .3s;
   display: none;
   background: white;
+  border: 1px solid rgb(238, 238, 238);
+  border-radius: 5px;
 }
 
 :host(.gridster-item-moving) {
@@ -25,7 +27,7 @@
 
 .gridster-item-resizable-handler.handle-n {
   cursor: n-resize;
-  height: 10px;
+  height: 20px;
   right: 0;
   top: 0;
   left: 0;
@@ -33,7 +35,7 @@
 
 .gridster-item-resizable-handler.handle-e {
   cursor: e-resize;
-  width: 10px;
+  width: 20px;
   bottom: 0;
   right: 0;
   top: 0;
@@ -41,7 +43,7 @@
 
 .gridster-item-resizable-handler.handle-s {
   cursor: s-resize;
-  height: 10px;
+  height: 20px;
   right: 0;
   bottom: 0;
   left: 0;
@@ -49,7 +51,7 @@
 
 .gridster-item-resizable-handler.handle-w {
   cursor: w-resize;
-  width: 10px;
+  width: 20px;
   left: 0;
   top: 0;
   bottom: 0;
@@ -57,16 +59,16 @@
 
 .gridster-item-resizable-handler.handle-ne {
   cursor: ne-resize;
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
   right: 0;
   top: 0;
 }
 
 .gridster-item-resizable-handler.handle-nw {
   cursor: nw-resize;
-  width: 10px;
-  height: 10px;
+  width: 20px;
+  height: 20px;
   left: 0;
   top: 0;
 }
@@ -80,16 +82,17 @@
   border-style: solid;
   border-width: 0 0 10px 10px;
   border-color: transparent;
+  border-radius: 10px
 }
 
 .gridster-item-resizable-handler.handle-sw {
   cursor: sw-resize;
   width: 10px;
-  height: 10px;
+  height: 20px;
   left: 0;
   bottom: 0;
 }
 
 :host(:hover) .gridster-item-resizable-handler.handle-se {
-  border-color: transparent transparent #ccc
+  border-color:  #ccc
 }
