Added Basic Grid

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,28 +1,15 @@
 <app-nav></app-nav>
+<app-widgets></app-widgets>
 <mat-accordion>
     <mat-expansion-panel>
       <mat-expansion-panel-header>
         <mat-panel-title>
-          Map
+          Direct Report Grid
         </mat-panel-title>
         <mat-panel-description>
-        <p>worx</p>
         </mat-panel-description>
       </mat-expansion-panel-header>
+      <p><app-grid>Loading...</app-grid></p>
 </mat-expansion-panel>
-
-    <mat-expansion-panel (opened)="panelOpenState = true"
-                         (closed)="panelOpenState = false">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Self aware panel
-        </mat-panel-title>
-        <mat-panel-description>
-          Currently I am {{panelOpenState ? 'open' : 'closed'}}
-        </mat-panel-description>
-      </mat-expansion-panel-header>
-      <p>worx</p>
-    </mat-expansion-panel>
-  </mat-accordion>
   
-  <app-widgets></app-widgets> 
+
