--- a/src/app/dashboard/nav/nav.component.html
+++ b/src/app/dashboard/nav/nav.component.html
@@ -2,7 +2,7 @@
   <mat-toolbar-row>
     <span>Metrix Base</span>
     <span class="example-spacer"></span>
-    <mat-icon class="example-icon">favorite</mat-icon>
+    <mat-icon class="example-icon">settings</mat-icon>
     <mat-icon class="example-icon">delete</mat-icon>
   </mat-toolbar-row>
 </mat-toolbar>
