--- a/src/app/dashboard/nav/nav.component.html
+++ b/src/app/dashboard/nav/nav.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary" margin="0px">
   <mat-toolbar-row>
+      <mat-icon class="example-icon">menu</mat-icon>
     <span>Metrix Base</span>
     <span class="example-spacer"></span>
     <mat-icon class="example-icon">settings</mat-icon>
