--- a/src/app/dashboard/widgets/widgets.component.html
+++ b/src/app/dashboard/widgets/widgets.component.html
@@ -3,9 +3,8 @@
     <gridster-item [item]="item" *ngFor="let item of dashboard">
       <div class="button-holder">
         <div class="gridster-item-content" *ngIf="item.hasContent">
-          <div class="stuff">
-            <span>Some content to select and click without dragging the widget</span>
-            <a href="https://www.google.com" target="_blank">Link to Google</a>
+          <div>
+            <app-grid>Loading...</app-grid>
           </div>
         </div>
         <div class="item-buttons" *ngIf="item.hasContent">
